# Cryogenic_Cooling_Time_Calculator

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  cooling_gui.py  index.html  pyproject.toml  requirements.txt  start_gui.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci-backup.yml  ci.yml  docs-simple.yml  docs.yml  quality.yml  release.yml  test.yml
core/: calculation_engine.py
docs/: README.md  USAGE.md
scripts/: simple_calculator.py  test_components.py
tests/: test_calculation_engine.py
utils/: font_utils.py  test_utils.py
